--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+yarn.lock
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -54,6 +55,7 @@ web_modules/
 
 # Optional eslint cache
 .eslintcache
+eslint.config.js
 
 # Optional stylelint cache
 .stylelintcache
@@ -139,3 +141,7 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+vite.config.js
+
+#Readme files removing
+README.md
